--- a/lib/src/tabs/tabs.scss
+++ b/lib/src/tabs/tabs.scss
@@ -50,10 +50,15 @@ nav {
 }
 
 /* Tab Label Active State */
-
-[data-tab="tab1"]:checked ~ nav [data-tab-label="tab1"],
-[data-tab="tab2"]:checked ~ nav [data-tab-label="tab2"],
-[data-tab="tab3"]:checked ~ nav [data-tab-label="tab3"] {
+[data-tab]:nth-of-type(1):checked ~ nav [data-tab-label]:nth-of-type(1),
+[data-tab]:nth-of-type(2):checked ~ nav [data-tab-label]:nth-of-type(2),
+[data-tab]:nth-of-type(3):checked ~ nav [data-tab-label]:nth-of-type(3),
+[data-tab]:nth-of-type(4):checked ~ nav [data-tab-label]:nth-of-type(4),
+[data-tab]:nth-of-type(5):checked ~ nav [data-tab-label]:nth-of-type(5),
+[data-tab]:nth-of-type(6):checked ~ nav [data-tab-label]:nth-of-type(6),
+[data-tab]:nth-of-type(7):checked ~ nav [data-tab-label]:nth-of-type(7),
+[data-tab]:nth-of-type(8):checked ~ nav [data-tab-label]:nth-of-type(8),
+[data-tab]:nth-of-type(9):checked ~ nav [data-tab-label]:nth-of-type(9) {
   --tab-background-color: #fff;
   z-index: 10;
   border-bottom-color: #1D4ED8;
@@ -61,26 +66,44 @@ nav {
 }
 
 /* Tab Label Focus State */
-[data-tab="tab1"]:focus ~ nav [data-tab-label="tab1"],
-[data-tab="tab2"]:focus ~ nav [data-tab-label="tab2"],
-[data-tab="tab3"]:focus ~ nav [data-tab-label="tab3"] {
+[data-tab]:nth-of-type(1):focus ~ nav [data-tab-label]:nth-of-type(1),
+[data-tab]:nth-of-type(2):focus ~ nav [data-tab-label]:nth-of-type(2),
+[data-tab]:nth-of-type(3):focus ~ nav [data-tab-label]:nth-of-type(3),
+[data-tab]:nth-of-type(4):focus ~ nav [data-tab-label]:nth-of-type(4),
+[data-tab]:nth-of-type(5):focus ~ nav [data-tab-label]:nth-of-type(5),
+[data-tab]:nth-of-type(6):focus ~ nav [data-tab-label]:nth-of-type(6),
+[data-tab]:nth-of-type(7):focus ~ nav [data-tab-label]:nth-of-type(7),
+[data-tab]:nth-of-type(8):focus ~ nav [data-tab-label]:nth-of-type(8),
+[data-tab]:nth-of-type(9):focus ~ nav [data-tab-label]:nth-of-type(9) {
   outline: 2px auto #101010;
   outline: 2px auto Highlight;
   outline: 2px auto -webkit-focus-ring-color;
 }
 
 /* Hide focus ring if focus comes from a pointer device. */
-[data-tab="tab1"]:focus:not(:focus-visible) ~ nav [data-tab-label="tab1"],
-[data-tab="tab2"]:focus:not(:focus-visible) ~ nav [data-tab-label="tab2"],
-[data-tab="tab3"]:focus:not(:focus-visible) ~ nav [data-tab-label="tab3"]{
+[data-tab]:nth-of-type(1):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(1),
+[data-tab]:nth-of-type(2):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(2),
+[data-tab]:nth-of-type(3):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(3),
+[data-tab]:nth-of-type(4):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(4),
+[data-tab]:nth-of-type(5):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(5),
+[data-tab]:nth-of-type(6):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(6),
+[data-tab]:nth-of-type(7):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(7),
+[data-tab]:nth-of-type(8):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(8),
+[data-tab]:nth-of-type(9):focus:not(:focus-visible) ~ nav [data-tab-label]:nth-of-type(9) {
     outline: none;
 }
 
 /* Tab Panel Active State */
 
-[data-tab="tab1"]:checked ~ nav ~ [data-tab-panel="tab1"],
-[data-tab="tab2"]:checked ~ nav ~ [data-tab-panel="tab2"],
-[data-tab="tab3"]:checked ~ nav ~ [data-tab-panel="tab3"] {
+[data-tab]:nth-of-type(1):checked ~ [data-tab-panel]:nth-of-type(1),
+[data-tab]:nth-of-type(2):checked ~ [data-tab-panel]:nth-of-type(2),
+[data-tab]:nth-of-type(3):checked ~ [data-tab-panel]:nth-of-type(3),
+[data-tab]:nth-of-type(4):checked ~ [data-tab-panel]:nth-of-type(4),
+[data-tab]:nth-of-type(5):checked ~ [data-tab-panel]:nth-of-type(5),
+[data-tab]:nth-of-type(6):checked ~ [data-tab-panel]:nth-of-type(6),
+[data-tab]:nth-of-type(7):checked ~ [data-tab-panel]:nth-of-type(7),
+[data-tab]:nth-of-type(8):checked ~ [data-tab-panel]:nth-of-type(8),
+[data-tab]:nth-of-type(9):checked ~ [data-tab-panel]:nth-of-type(9) {
   visibility: visible;
   width: 100%;
   height: auto;
